// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test getSelection & setSelection > Basic 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 1",
          "type": "text",
        },
      ],
      "id": "paragraph-1",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
  "nextBlock": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Double Nested Paragraph 0",
                "type": "text",
              },
            ],
            "id": "double-nested-paragraph-0",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": [
          {
            "styles": {},
            "text": "Nested Paragraph 0",
            "type": "text",
          },
        ],
        "id": "nested-paragraph-0",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
    ],
    "content": [
      {
        "styles": {},
        "text": "Paragraph with children",
        "type": "text",
      },
    ],
    "id": "paragraph-with-children",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  "parentBlock": undefined,
  "prevBlock": {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 0",
        "type": "text",
      },
    ],
    "id": "paragraph-0",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
}
`;

exports[`Test getSelection & setSelection > First block 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 0",
          "type": "text",
        },
      ],
      "id": "paragraph-0",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
  "nextBlock": {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 1",
        "type": "text",
      },
    ],
    "id": "paragraph-1",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  "parentBlock": undefined,
  "prevBlock": undefined,
}
`;

exports[`Test getSelection & setSelection > Last block 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [],
      "id": "trailing-paragraph",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
  "nextBlock": undefined,
  "parentBlock": undefined,
  "prevBlock": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Double Nested Paragraph 1",
                "type": "text",
              },
            ],
            "id": "double-nested-paragraph-1",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": [
          {
            "styles": {},
            "text": "Nested Paragraph 1",
            "type": "text",
          },
        ],
        "id": "nested-paragraph-1",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
    ],
    "content": [
      {
        "styles": {
          "bold": true,
        },
        "text": "Heading",
        "type": "text",
      },
      {
        "styles": {},
        "text": " with styled ",
        "type": "text",
      },
      {
        "styles": {
          "italic": true,
        },
        "text": "content",
        "type": "text",
      },
    ],
    "id": "heading-with-everything",
    "props": {
      "backgroundColor": "red",
      "level": 2,
      "textAlignment": "center",
      "textColor": "red",
    },
    "type": "heading",
  },
}
`;

exports[`Test getSelection & setSelection > Multiple blocks 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 0",
          "type": "text",
        },
      ],
      "id": "paragraph-0",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 1",
          "type": "text",
        },
      ],
      "id": "paragraph-1",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Double Nested Paragraph 0",
                  "type": "text",
                },
              ],
              "id": "double-nested-paragraph-0",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": [
            {
              "styles": {},
              "text": "Nested Paragraph 0",
              "type": "text",
            },
          ],
          "id": "nested-paragraph-0",
          "props": {
            "backgroundColor": "default",
            "textAlignment": "left",
            "textColor": "default",
          },
          "type": "paragraph",
        },
      ],
      "content": [
        {
          "styles": {},
          "text": "Paragraph with children",
          "type": "text",
        },
      ],
      "id": "paragraph-with-children",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 2",
          "type": "text",
        },
      ],
      "id": "paragraph-2",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
  "nextBlock": {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph with props",
        "type": "text",
      },
    ],
    "id": "paragraph-with-props",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "center",
      "textColor": "red",
    },
    "type": "paragraph",
  },
  "parentBlock": undefined,
  "prevBlock": undefined,
}
`;

exports[`Test getSelection & setSelection > Multiple blocks with nesting 1`] = `
{
  "blocks": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Double Nested Paragraph 0",
                  "type": "text",
                },
              ],
              "id": "double-nested-paragraph-0",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": [
            {
              "styles": {},
              "text": "Nested Paragraph 0",
              "type": "text",
            },
          ],
          "id": "nested-paragraph-0",
          "props": {
            "backgroundColor": "default",
            "textAlignment": "left",
            "textColor": "default",
          },
          "type": "paragraph",
        },
      ],
      "content": [
        {
          "styles": {},
          "text": "Paragraph with children",
          "type": "text",
        },
      ],
      "id": "paragraph-with-children",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 2",
          "type": "text",
        },
      ],
      "id": "paragraph-2",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
  "nextBlock": {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph with props",
        "type": "text",
      },
    ],
    "id": "paragraph-with-props",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "center",
      "textColor": "red",
    },
    "type": "paragraph",
  },
  "parentBlock": undefined,
  "prevBlock": {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph 1",
        "type": "text",
      },
    ],
    "id": "paragraph-1",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
}
`;

exports[`Test getSelection & setSelection > Nested block 1`] = `
{
  "blocks": [
    {
      "children": [
        {
          "children": [],
          "content": [
            {
              "styles": {},
              "text": "Double Nested Paragraph 0",
              "type": "text",
            },
          ],
          "id": "double-nested-paragraph-0",
          "props": {
            "backgroundColor": "default",
            "textAlignment": "left",
            "textColor": "default",
          },
          "type": "paragraph",
        },
      ],
      "content": [
        {
          "styles": {},
          "text": "Nested Paragraph 0",
          "type": "text",
        },
      ],
      "id": "nested-paragraph-0",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
  "nextBlock": undefined,
  "parentBlock": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": [
              {
                "styles": {},
                "text": "Double Nested Paragraph 0",
                "type": "text",
              },
            ],
            "id": "double-nested-paragraph-0",
            "props": {
              "backgroundColor": "default",
              "textAlignment": "left",
              "textColor": "default",
            },
            "type": "paragraph",
          },
        ],
        "content": [
          {
            "styles": {},
            "text": "Nested Paragraph 0",
            "type": "text",
          },
        ],
        "id": "nested-paragraph-0",
        "props": {
          "backgroundColor": "default",
          "textAlignment": "left",
          "textColor": "default",
        },
        "type": "paragraph",
      },
    ],
    "content": [
      {
        "styles": {},
        "text": "Paragraph with children",
        "type": "text",
      },
    ],
    "id": "paragraph-with-children",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  "prevBlock": undefined,
}
`;
